--- a/BuchLeaflet/presentation/index.html
+++ b/BuchLeaflet/presentation/index.html
@@ -1355,6 +1355,15 @@
 							Grenzen von GeoJSON
 						</h2>
 					</section>
+					<section>
+						<ul>
+							<li>GeoJSON hat kein Konstrukt das eine Komprimierung unterstützt.</li>
+							<li class="fragment">GeoJSON unterstützt die gleichen Datentypen wie JSON. JSON unterstützt nicht jeden Datentyp.<br><small>Beispielsweise kein Datum.</small></li>
+							<li class="fragment">GeoJSON hat kein Konstrukt für die Anzeige von Pop-up-Fenstern wie Titel oder Beschreibung. <br><small>Ihr werdet aber später sehen, wie Leaflet euch bei der Erstellung von Pop-up-Fenstern unterstützt.</small></li>
+							<li class="fragment">GeoJSON hat keine Geometrie vom Typ Kreis <br><small>– oder irgendeine andere Art von Kurve.</small></li>
+							<li class="fragment">In GeoJSON kannst du den einzelnen Koordinaten – also den Positionen, keine eigene Eigenschaft zuweisen. <br><small>Wenn du eine LineString-Darstellung eines Trainingslaufs hast mit Puls und Herzfrequenz ...</small></li>
+						</ul>
+					</section>
 				</section>
 
 
