--- a/BuchLeaflet/code/2/index_967.html
+++ b/BuchLeaflet/code/2/index_967.html
@@ -33,13 +33,22 @@ var geojsonFeatureCollection =
 }
 ]
 };
-var options = {
+var options_draggable = {
 draggable: true,
+title: "Ein Ort in der Nähe von Gering"
+};
+var options_notdraggable = {
+draggable: false,
 title: "Ein Ort in der Nähe von Gering"
 };
 L.geoJson(geojsonFeatureCollection, {
 pointToLayer: function(feature, latlng) {
-return L.marker(latlng, options).bindPopup(feature.properties.name);
+switch(feature.properties.name)
+{
+case "Dorf 1": return L.marker(latlng, options_draggable).bindPopup(feature.properties.name);
+case "Dorf 2": return L.marker(latlng, options_notdraggable).bindPopup(feature.properties.name);
+case "Dorf 3": return L.marker(latlng, options_notdraggable).bindPopup(feature.properties.name);
+}
 }
 }).addTo(mymap);
 </script>
