--- a/BuchLeaflet/code/2/index_971.html
+++ b/BuchLeaflet/code/2/index_971.html
@@ -13,10 +13,8 @@ var mymap = L.map('mapid').setView([50.27264, 7.26469], 7);
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
 var myMarker=L.marker([50.27264, 7.26469]);
 var markerAsGeoJSON = myMarker.toGeoJSON();
-//alert(JSON.stringify(markerAsGeoJSON) );
-// leeren Layer erstellen
 var geoJsonLayer = L.geoJson().addTo(mymap);
-geoJsonLayer.addData(markerAsGeoJSON).bindPopup("Ich bin mit der Methode .addData() zur Karte hinzugefügt worden.");
+geoJsonLayer.addData(markerAsGeoJSON).bindPopup("Ich bin mit der Methode .addData() zur Karte hinzugefügt worden. In GeoJson sehe ich so aus:<br> " + JSON.stringify(markerAsGeoJSON));
 </script>
 </body>
 </html>
