--- a/BuchLeaflet/code/2/index_973_1.html
+++ b/BuchLeaflet/code/2/index_973_1.html
@@ -1,14 +1,14 @@
-<!DOCTYPE HTML>
-<html lang="de">
-<head>
-<meta charset="utf-8"/>
-<title>Eine OSM Karte mit Leaflet</title>
-<link rel="stylesheet" href="../leaflet/leaflet.css" />
-<script src="../leaflet/leaflet.js"></script>
-</head>
-<body>
-<div style="height: 700px;" id="mapid"></div>
-<script>
+&lt;!DOCTYPE HTML&gt;
+&lt;html lang="de"&gt;
+&lt;head&gt;
+&lt;meta charset="utf-8"/&gt;
+&lt;title&gt;Eine OSM Karte mit Leaflet&lt;/title&gt;
+&lt;link rel="stylesheet" href="../leaflet/leaflet.css" /&gt;
+&lt;script src="../leaflet/leaflet.js"&gt;&lt;/script&gt;
+&lt;/head&gt;
+&lt;body&gt;
+&lt;div style="height: 700px;" id="mapid"&gt;&lt;/div&gt;
+&lt;script&gt;
 var mymap = L.map('mapid').setView([50.27264, 7.26469], 7);
 L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png').addTo(mymap);
 var geojsonFeature1 = {
@@ -22,6 +22,6 @@ var geojsonFeature1 = {
 }
 };
 L.geoJSON(geojsonFeature1).addTo(mymap);
-</script>
-</body>
-</html>
+&lt;/script&gt;
+&lt;/body&gt;
+&lt;/html&gt;
